public/styling/style.css
h1, h2, h3 {
  font-family: Arial, Helvetica, sans-serif;
  color: #0b0c0c;
  margin-top: 20px;
}

h1 {
  font-size: 34px;
}

p {
  font-family: Arial, Helvetica, sans-serif;
  color: #0b0c0c;
  font-size: 16 px;
}

a {
  color: #1d70b8;
}

button {
  padding: 10px;
  border: none;
  margin-top: 20px;
  margin-bottom: 20px;
  font-family: Arial, Helvetica, sans-serif;
  color: #0b0c0c;
  font-size: 16px;
  border-bottom: 2px solid #0b0c0c;
  transition-duration: 0.4s;
  -webkit-transition-duration: 0.4s;
  /* Safari*/
}

button:hover {
  border:2px solid #0b0c0c;
}

button:visited {
    border:2px solid #ffffff;
}

button:focus {
  border:2px solid #ffffff;
}

.progress-btn {
  background-color: #00703c;
  color: #ffffff;
}

.secondary-btn {
  background-color: #f3f2f1;
  color: #0b0c0c;
  border-bottom-color: #626a6e !important;
}

.regress-btn {
  background-color: #0b0c0c;
  color: #ffffff;
}

.danger-btn {
  background-color: #d4351c;
  color: #ffffff;
}

.only-header {
  text-align: center;
  margin-top: 100px;
}

body > div {
  display: flex;
  justify-content: center;
}

.container{
	width:80%;
	margin:auto;
	overflow:hidden;
}

.container h2{
  margin = 0;
}

#main-header {
	color: #fff;
	background-color: black;
	height:50px;
	width: 1242px;
}

#main-header h1{
	font-weight: 700;
	font-size: 35px;
	float:left;
	position:relative;
  bottom: 15px;
  color: #fff;
}

#navbar{
	background-color: #f3f2f1;
	color:#fff;
}

#navbar ul{
	padding:0;
	list-style:none;
}

#navbar li{
	display: inline;
}

#navbar a{
	position:relative;
	left: 5px;
	color:#1d70b8;
	text-decoration: none;
	font-size: 18px;
	padding-right: 20px;
}

/*# sourceMappingURL=style.css.map */

